# Dolls

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
crates/core/: Cargo.toml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: io.rs  lib.rs  server.rs
crates/network/src/io/: packet.rs  parser.rs
crates/network/src/io/packet/: handshake.rs  processor.rs  raw.rs
