
[workspace]
members = [
    "app", "crates/core", "crates/macros", "crates/network",
]
resolver = "2"

[workspace.dependencies]
log = "0.4"
spdlog-rs = "0.4"
async-std = "1.13"
anyhow = "1"
flate2 = "1.0"
inventory = "0.3"
once_cell = "1.20"

dolls_core.path = "crates/core"
dolls_network.path = "crates/network"
dolls_macros.path = "crates/macros"
