[package]
name = "dolls_network"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std.workspace = true
spdlog-rs.workspace = true
anyhow.workspace = true
flate2.workspace = true
inventory.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
crab_nbt.workspace = true
uuid.workspace = true
bitflags.workspace = true

dolls_macros.workspace = true
